crates/tlang_parser/tests/snapshots/parser_generics__generic_enum_declaration.snap
---
source: crates/tlang_parser/tests/parser_generics.rs
expression: "parse!\n(indoc::indoc!\n{\"\n        enum Result<T, E> {\n            Ok(T),\n            Err(E),\n        }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: EnumDeclaration(EnumDeclaration(
        visibility: Private,
        name: Ident(
          name: "Result",
          span: Span(
            start: 5,
            end: 11,
            start_lc: LineColumn(
              line: 0,
              column: 5,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 11,
            ),
          ),
        ),
        type_params: [
          TypeParam(
            id: 3,
            name: Ident(
              name: "T",
              span: Span(
                start: 12,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ),
            span: Span(
              start: 12,
              end: 13,
              start_lc: LineColumn(
                line: 0,
                column: 12,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 13,
              ),
            ),
          ),
          TypeParam(
            id: 4,
            name: Ident(
              name: "E",
              span: Span(
                start: 15,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            ),
            span: Span(
              start: 15,
              end: 16,
              start_lc: LineColumn(
                line: 0,
                column: 15,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 16,
              ),
            ),
          ),
        ],
        variants: [
          EnumVariant(
            id: 7,
            name: Ident(
              name: "Ok",
              span: Span(
                start: 24,
                end: 26,
                start_lc: LineColumn(
                  line: 1,
                  column: 5,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 7,
                ),
              ),
            ),
            parameters: [
              StructField(
                id: 6,
                name: Ident(
                  name: "0",
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                ty: Ty(
                  id: 5,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "T",
                        span: Span(
                          start: 27,
                          end: 28,
                          start_lc: LineColumn(
                            line: 1,
                            column: 8,
                          ),
                          end_lc: LineColumn(
                            line: 1,
                            column: 9,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 27,
                      end: 28,
                      start_lc: LineColumn(
                        line: 1,
                        column: 8,
                      ),
                      end_lc: LineColumn(
                        line: 1,
                        column: 9,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: 27,
                    end: 28,
                    start_lc: LineColumn(
                      line: 1,
                      column: 8,
                    ),
                    end_lc: LineColumn(
                      line: 1,
                      column: 9,
                    ),
                  ),
                ),
              ),
            ],
            discriminant: None,
            span: Span(
              start: 24,
              end: 29,
              start_lc: LineColumn(
                line: 1,
                column: 5,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 10,
              ),
            ),
          ),
          EnumVariant(
            id: 10,
            name: Ident(
              name: "Err",
              span: Span(
                start: 35,
                end: 38,
                start_lc: LineColumn(
                  line: 2,
                  column: 5,
                ),
                end_lc: LineColumn(
                  line: 2,
                  column: 8,
                ),
              ),
            ),
            parameters: [
              StructField(
                id: 9,
                name: Ident(
                  name: "0",
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                ty: Ty(
                  id: 8,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "E",
                        span: Span(
                          start: 39,
                          end: 40,
                          start_lc: LineColumn(
                            line: 2,
                            column: 9,
                          ),
                          end_lc: LineColumn(
                            line: 2,
                            column: 10,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 39,
                      end: 40,
                      start_lc: LineColumn(
                        line: 2,
                        column: 9,
                      ),
                      end_lc: LineColumn(
                        line: 2,
                        column: 10,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: 39,
                    end: 40,
                    start_lc: LineColumn(
                      line: 2,
                      column: 9,
                    ),
                    end_lc: LineColumn(
                      line: 2,
                      column: 10,
                    ),
                  ),
                ),
              ),
            ],
            discriminant: None,
            span: Span(
              start: 35,
              end: 41,
              start_lc: LineColumn(
                line: 2,
                column: 5,
              ),
              end_lc: LineColumn(
                line: 2,
                column: 11,
              ),
            ),
          ),
        ],
        consts: [],
      )),
      span: Span(
        start: 0,
        end: 44,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 3,
          column: 2,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 44,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 3,
      column: 2,
    ),
  ),
)
