crates/tlang_parser/tests/snapshots/parser_generics__generic_function_multiple_bounds.snap
---
source: crates/tlang_parser/tests/parser_generics.rs
expression: "parse!\n(indoc::indoc!\n{\"\n        fn serialize<T: Display + Serialize>(value: T) -> String { value }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 14,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 13,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "serialize",
                span: Span(
                  start: 3,
                  end: 12,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 12,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 12,
            ),
          ),
        ),
        type_params: [
          TypeParam(
            id: 6,
            name: Ident(
              name: "T",
              span: Span(
                start: 13,
                end: 14,
                start_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
              ),
            ),
            bounds: [
              Ty(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "Display",
                      span: Span(
                        start: 16,
                        end: 23,
                        start_lc: LineColumn(
                          line: 0,
                          column: 16,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 23,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 16,
                    end: 23,
                    start_lc: LineColumn(
                      line: 0,
                      column: 16,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                  ),
                )),
                parameters: [],
                span: Span(
                  start: 16,
                  end: 23,
                  start_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 23,
                  ),
                ),
              ),
              Ty(
                id: 5,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "Serialize",
                      span: Span(
                        start: 26,
                        end: 35,
                        start_lc: LineColumn(
                          line: 0,
                          column: 26,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 35,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 26,
                    end: 35,
                    start_lc: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 35,
                    ),
                  ),
                )),
                parameters: [],
                span: Span(
                  start: 26,
                  end: 35,
                  start_lc: LineColumn(
                    line: 0,
                    column: 26,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 35,
                  ),
                ),
              ),
            ],
            span: Span(
              start: 13,
              end: 35,
              start_lc: LineColumn(
                line: 0,
                column: 13,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 35,
              ),
            ),
          ),
        ],
        parameters: [
          FunctionParameter(
            pattern: Pat(
              id: 7,
              kind: Identifier(Ident(
                name: "value",
                span: Span(
                  start: 37,
                  end: 42,
                  start_lc: LineColumn(
                    line: 0,
                    column: 37,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 42,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 37,
                end: 42,
                start_lc: LineColumn(
                  line: 0,
                  column: 37,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 42,
                ),
              ),
            ),
            type_annotation: Some(Ty(
              id: 8,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "T",
                    span: Span(
                      start: 44,
                      end: 45,
                      start_lc: LineColumn(
                        line: 0,
                        column: 44,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 45,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 44,
                  end: 45,
                  start_lc: LineColumn(
                    line: 0,
                    column: 44,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 45,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 44,
                end: 45,
                start_lc: LineColumn(
                  line: 0,
                  column: 44,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 45,
                ),
              ),
            )),
            span: Span(
              start: 37,
              end: 45,
              start_lc: LineColumn(
                line: 0,
                column: 37,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 45,
              ),
            ),
          ),
        ],
        params_span: Span(
          start: 36,
          end: 46,
          start_lc: LineColumn(
            line: 0,
            column: 36,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 46,
          ),
        ),
        guard: None,
        return_type_annotation: Some(Ty(
          id: 9,
          kind: Path(Path(
            segments: [
              Ident(
                name: "String",
                span: Span(
                  start: 50,
                  end: 56,
                  start_lc: LineColumn(
                    line: 0,
                    column: 50,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 56,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 50,
              end: 56,
              start_lc: LineColumn(
                line: 0,
                column: 50,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 56,
              ),
            ),
          )),
          parameters: [],
          span: Span(
            start: 50,
            end: 56,
            start_lc: LineColumn(
              line: 0,
              column: 50,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 56,
            ),
          ),
        )),
        body: Block(
          id: 12,
          statements: [],
          expression: Some(Expr(
            id: 11,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "value",
                  span: Span(
                    start: 59,
                    end: 64,
                    start_lc: LineColumn(
                      line: 0,
                      column: 59,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 64,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 59,
                end: 64,
                start_lc: LineColumn(
                  line: 0,
                  column: 59,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 64,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 59,
              end: 64,
              start_lc: LineColumn(
                line: 0,
                column: 59,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 64,
              ),
            ),
          )),
          span: Span(
            start: 57,
            end: 66,
            start_lc: LineColumn(
              line: 0,
              column: 57,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 66,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 66,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 66,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 66,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 66,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 66,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 66,
    ),
  ),
)
